--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,1 +1,15 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>BIFI</title>
+    <!-- inject:head:css -->
+    <!-- endinject:head:css -->
+</head>
+<body>
+    <!-- inject:body:js -->
+    <!-- endinject:body:js -->
+</body>
+</html>
