[Update] Cursors: Add more cursors to demo

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,6 +9,11 @@
     <!-- endinject:head:css -->
 </head>
 <body>
+
+    <div class="nono">
+    </div>
+    <div class="bifi">
+    </div>
     <!-- inject:body:js -->
     <!-- endinject:body:js -->
 </body>
