[Feature] Cursor / BIFI type

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,10 +10,16 @@
 </head>
 <body>
 
-    <div class="nono">
+    <h1>For Interaction <br> By Interaction</h1>
+    <div class="main-bifi main-bifi--vertical">
+        <div class="main-bifi__content">
+            <span class="main-bifi__letter">F</span><span class="main-bifi__letter main-bifi__letter--i">I</span><span class="main-bifi__break"></span><span class="main-bifi__letter main-bifi__letter--b">B</span><span class="main-bifi__letter main-bifi__letter--i">I</span>
+        </div>
+    </div>
+<!--     <div class="nono">
     </div>
     <div class="bifi">
-    </div>
+    </div> -->
     <!-- inject:body:js -->
     <!-- endinject:body:js -->
 </body>
