--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
 
-    <h1>For Interaction <br> By Interaction</h1>
+    <h1 class="basetext">For Interaction <br> By Interaction</h1>
+    <date class="basetext basetext--date">25.04.2015, 18 Uhr</date>
+    <a href="#" class="basetext basetext--info">What is FIBI?</a>
+    <span class="basetext basetext--location">ZHdK Toni-Areal Raum 5.K03</span>
+
     <div class="main-bifi main-bifi--vertical">
         <div class="main-bifi__content">
             <span class="main-bifi__letter">F</span><span class="main-bifi__letter main-bifi__letter--i">I</span><span class="main-bifi__break"></span><span class="main-bifi__letter main-bifi__letter--b">B</span><span class="main-bifi__letter main-bifi__letter--i">I</span>
