[Feature] Draggable Typo / Improve responsive display

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
 
-    <h1 class="basetext">For Interaction <br> By Interaction</h1>
-    <date class="basetext basetext--date">25.04.2015, 18 Uhr</date>
-    <a href="#" class="basetext basetext--info">What is FIBI?</a>
-    <span class="basetext basetext--location">ZHdK Toni-Areal Raum 5.K03</span>
+    <h1 class="basetext" data-js-draggable>For Interaction <br> By Interaction</h1>
+    <date class="basetext basetext--date" data-js-draggable>25.04.2015, 18 Uhr</date>
+    <a href="#" class="basetext basetext--info" data-js-draggable>What is FIBI?</a>
+    <span class="basetext basetext--location" data-js-draggable>ZHdK Toni-Areal<br>Raum 5.K03</span>
 
     <div class="main-bifi main-bifi--vertical">
         <div class="main-bifi__content">
-            <span class="main-bifi__letter">F</span><span class="main-bifi__letter main-bifi__letter--i">I</span><span class="main-bifi__break"></span><span class="main-bifi__letter main-bifi__letter--b">B</span><span class="main-bifi__letter main-bifi__letter--i">I</span>
+            <span class="main-bifi__letter" data-js-draggable>F</span><span class="main-bifi__letter main-bifi__letter--i" data-js-draggable>I</span><span class="main-bifi__break"></span><span class="main-bifi__letter main-bifi__letter--b" data-js-draggable>B</span><span class="main-bifi__letter main-bifi__letter--i" data-js-draggable>I</span>
         </div>
     </div>
 <!--     <div class="nono">
