--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,10 +20,13 @@
             <span class="main-bifi__letter" data-js-draggable>F</span><span class="main-bifi__letter main-bifi__letter--i" data-js-draggable>I</span><span class="main-bifi__break"></span><span class="main-bifi__letter main-bifi__letter--b" data-js-draggable>B</span><span class="main-bifi__letter main-bifi__letter--i" data-js-draggable>I</span>
         </div>
     </div>
-<!--     <div class="nono">
+
+    <div class="banner" data-js-draggable>
+        <!-- <span class="banner__info">Zu Gast</span> -->
+        <h2 class="banner__title">iart</h2>
+        <span class="banner__subtitle">Zu Gast aus Basel</span>
     </div>
-    <div class="bifi">
-    </div> -->
+
     <!-- inject:body:js -->
     <!-- endinject:body:js -->
 </body>
