--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,6 +7,7 @@
     <title>BIFI</title>
     <!-- inject:head:css -->
     <!-- endinject:head:css -->
+    <script src="js/vendor/modernizr_vwvh_build.min.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 
@@ -27,6 +28,12 @@
         <span class="banner__subtitle">Zu Gast aus Basel</span>
     </div>
 
+    <div class="hands"></div>
+    <div class="hands hands--right"></div>
+
+    <script src="js/vendor/tokenizer.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/vendor/parser.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/vendor/vminpoly.js" type="text/javascript" charset="utf-8"></script>
     <!-- inject:body:js -->
     <!-- endinject:body:js -->
 </body>
