[Megacommit] ALL the features

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,33 +3,49 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BIFI</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <title>FIBI – For Interaction By Interaction</title>
     <!-- inject:head:css -->
     <!-- endinject:head:css -->
-    <script src="js/vendor/modernizr_vwvh_build.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/vendor/modernizr_build.min.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
+    <main>
+        <section class="mainsite">
+            <h1 class="basetext" data-js-draggable>For Interaction <br> By Interaction</h1>
+            <date class="basetext basetext--date" data-js-draggable>06.05.2015, 18 Uhr</date>
+            <a href="#" class="basetext basetext--info" data-js-draggable data-js-bifi-info>Was ist FIBI?</a>
+            <span class="basetext basetext--location" data-js-draggable>ZHdK Toni-Areal<br>Raum 5.K03</span>
 
-    <h1 class="basetext" data-js-draggable>For Interaction <br> By Interaction</h1>
-    <date class="basetext basetext--date" data-js-draggable>25.04.2015, 18 Uhr</date>
-    <a href="#" class="basetext basetext--info" data-js-draggable>What is FIBI?</a>
-    <span class="basetext basetext--location" data-js-draggable>ZHdK Toni-Areal<br>Raum 5.K03</span>
+            <div class="mainbifi mainbifi--vertical">
+                <div class="mainbifi__content">
+                    <span class="mainbifi__letter" data-js-draggable>F</span><span class="mainbifi__letter mainbifi__letter--i" data-js-draggable>I</span><span class="mainbifi__break"></span><span class="mainbifi__letter mainbifi__letter--b" data-js-draggable>B</span><span class="mainbifi__letter mainbifi__letter--i" data-js-draggable>I</span>
+                </div>
+            </div>
 
-    <div class="main-bifi main-bifi--vertical">
-        <div class="main-bifi__content">
-            <span class="main-bifi__letter" data-js-draggable>F</span><span class="main-bifi__letter main-bifi__letter--i" data-js-draggable>I</span><span class="main-bifi__break"></span><span class="main-bifi__letter main-bifi__letter--b" data-js-draggable>B</span><span class="main-bifi__letter main-bifi__letter--i" data-js-draggable>I</span>
-        </div>
-    </div>
+            <div class="banner" data-js-draggable>
+                <!-- <span class="banner__info">Zu Gast</span> -->
+                <h2 class="banner__title">iart</h2>
+                <span class="banner__subtitle">Zu Gast aus Basel</span>
+            </div>
 
-    <div class="banner" data-js-draggable>
-        <!-- <span class="banner__info">Zu Gast</span> -->
-        <h2 class="banner__title">iart</h2>
-        <span class="banner__subtitle">Zu Gast aus Basel</span>
-    </div>
-
-    <div class="hands"></div>
-    <div class="hands hands--right"></div>
+            <div class="hands" data-js-draggable></div>
+            <div class="hands hands--right" data-js-draggable></div>
+            <div class="infocard" data-js-draggable>
+                <div class="infocard__close" data-js-bifi-close-info></div>
+                <h2 class="infocard__title">FIBI — &laquo;For Interaction<br> By Interaction&raquo;</h2>
+                <div class="infocard__reveal reveal">
+                    <br>
+                    ——<br><br>
+                    <p>Die Studenten der Vertiefung Interaction Design an der ZHdK laden ein, zur neuen Eventreihe.</p>
+                    <p>Wir bieten eine Plattform, auf der Studierende, Alumnis und Industrie sich treffen und austauschen.</p>
+                    <br>
+                    ——<br>
+                    Kontakt — <a href="mailto:david.simon@zhdk.ch" class="infocard__link">D. Simon</a>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <script src="js/vendor/tokenizer.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/vendor/parser.js" type="text/javascript" charset="utf-8"></script>
