[Update] Font-fixes

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
     <title>FIBI – For Interaction By Interaction</title>
     <!-- inject:head:css -->
     <!-- endinject:head:css -->
@@ -37,7 +37,7 @@
                 <div class="infocard__reveal reveal">
                     <br>
                     ——<br><br>
-                    <p>Die Studenten der Vertiefung Interaction Design an der ZHdK laden ein, zur neuen Eventreihe.</p>
+                    <p>Die Studenten der Vertiefung Interaction Design an der ZHdK laden zur neuen Eventreihe ein.</p>
                     <p>Wir bieten eine Plattform, auf der Studierende, Alumnis und Industrie sich treffen und austauschen.</p>
                     <br>
                     ——<br>
