[Fix] Info-Overlay: Fix typo

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -38,7 +38,7 @@
                     <br>
                     ——<br><br>
                     <p>Die Studenten der Vertiefung Interaction Design an der ZHdK laden zur neuen Eventreihe ein.</p>
-                    <p>Wir bieten eine Plattform, auf der Studierende, Alumnis und Industrie sich treffen und austauschen.</p>
+                    <p>Wir bieten eine Plattform, auf der Studierende, Alumni und Industrie sich treffen und austauschen.</p>
                     <br>
                     ——<br>
                     Kontakt — <a href="mailto:david.simon@zhdk.ch" class="infocard__link">D. Simon</a>
