--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
     <title>FIBI – For Interaction By Interaction</title>
+
+    <!--
+      _____ _
+     / ____(_)
+    | (___  _ _ __ ___   ___  _ __       _
+     \___ \| | '_ ` _ \ / _ \| '_ \    _| |_
+     ____) | | | | | | | (_) | | | |  |_   _|
+    |_____/|_|_| |_| |_|\___/|_| |_|    |_|
+     ______ _
+    |  ____| |
+    | |__  | |__  _ __ ___ _ __  _ __ ___   __ _ _ __  _ __
+    |  __| | '_ \| '__/ _ \ '_ \| '_ ` _ \ / _` | '_ \| '_ \
+    | |____| | | | | |  __/ | | | | | | | | (_| | | | | | | |
+    |______|_| |_|_|  \___|_| |_|_| |_| |_|\__,_|_| |_|_| |_|
+
+    Handcrafted with <3
+    www.simonehrenmann.ch
+
+    -->
+    <script src="js/vendor/modernizr_build.min.js" type="text/javascript" charset="utf-8"></script>
     <!-- inject:head:css -->
     <!-- endinject:head:css -->
-    <script src="js/vendor/modernizr_build.min.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
     <main>
